GNOME Bugzilla – Bug 584645
Unable to upload attachments to bugzilla with ephy-webkit
Last modified: 2009-07-29 17:15:23 UTC
I haven't been able to attach a patch to a bug in freedesktop bugzilla. I thought it was a problem with fdo bz, but it worked with firefox. I've tried several times, sometimes it just keeps loading forever, and sometimes it shows an error page: Unable to load page Problem occurred while loading the URL https://bugs.freedesktop.org/attachment.cgi Connection terminated unexpectedly
Hey, can you please tell us what version of libsoup you have installed? Libsoup 2.26.1 had a problem which caused a number of those connection terminated unexpectedly errors. There are still some, which we are still tracking down.
$ pkg-config --modversion libsoup-2.4 2.27.1 installed from git: $ git log --pretty=oneline -n 1 dfdde36f28e3092c6ac20ecae3774903be92a153 Don't emit "authenticate" until a message is actually sent and fails.
hm... that should be plenty new enough I'm guessing this is another GNUTLS problem, though it's not the same as the others... Let me add some more GNUTLS debugging support...
confirmed that this is still broken with current git master. test bug at: https://bugs.freedesktop.org/show_bug.cgi?id=22097 fdo appears to drop the connection for no obvious reason after we write the POST...
Same problem with gentoo bugzilla and also with plain http. webkit-1.1.10 and ephy-2.27,3 and libsoup-2.26.2
I just created an attachment to http://bugs.gentoo.org/show_bug.cgi?id=275070 with no difficulties... If you still can't do it, can you try getting tcpdump or strace output (with "-s 1024" or so to make sure you get enough of the HTTP conversation). Assuming this is the same bug, the fact that bugs.gentoo.org manifests the bug without SSL ought to make it easier to debug than with bugs.freedesktop.org. Also, I note this comment on the front page of bugs.gentoo.org: While uploading an attachment, if you recieve an error about "Undefined subroutine Fh::slice", please logout and login again, making sure to load any page before trying to upload again. I wonder if this is related somehow?
still present for me with current git (fd5b785fbaad81f99c6c8b8bcb52028990e19120) FWIW.
Fixed in git and tested against fdo. The bug happens when the server closes the connection on us unexpectedly after we've already started writing the POST, so even though I could never reproduce against bugs.gentoo.org, I'm pretty sure it was the same problem, given the warning quoted above.
confirmed, it works now with bugzilla fdo. Thanks!